# SupplyKonnect

./: .gitignore  CONTRIBUTING.md  FILES_CREATED.md  ISSUES_TEST.md  LICENSE  PROJECT_STATUS.md  README.md  Supply-Konnect_ISSUES.md  docker-compose.yml
.github/workflows/: backend-ci.yml  contract-ci.yml  frontend-ci.yml
backend/: .env.example  Cargo.toml  README.md
backend/src/: db.rs  main.rs  state.rs
backend/src/models/: mod.rs
backend/src/routes/: mod.rs
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: .eslintrc.js  README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/import/: page.tsx
frontend/app/products/: page.tsx
frontend/app/products/[id]/: page.tsx
frontend/app/products/[id]/add-event/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: AnimatedCounter.tsx  Footer.tsx  MobileNav.tsx  Navbar.tsx  PageShell.tsx  QRCode.tsx  Sidebar.tsx  TransferOwner.tsx
frontend/lib/: api.ts  demo-data.ts  mock-data.ts  theme.tsx
frontend/lib/stellar/: types.ts
sdk/python/: README.md
sdk/rust/: README.md
smart-contract/: Cargo.toml  README.md
smart-contract/src/: error.rs  lib.rs  storage.rs  types.rs
